--- a/churn-prediction/package.json
+++ b/churn-prediction/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
     "react": "^18.3.1",
     "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
+    "recharts": "^2.13.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
