--- a/churn-prediction/package.json
+++ b/churn-prediction/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.1.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.3.1",
