--- a/churn-prediction/server/requirements.txt
+++ b/churn-prediction/server/requirements.txt
@@ -1,12 +1,15 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+bcrypt==4.1.2
 blinker==1.9.0
 certifi==2024.8.30
 click==8.1.7
+cryptography==41.0.8
 distro==1.9.0
 exceptiongroup==1.2.2
 Flask==3.1.0
 Flask-Cors==5.0.0
+Flask-Limiter==3.5.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
@@ -20,11 +23,16 @@ MarkupSafe==3.0.2
 numpy==2.0.2
 openai==1.55.0
 pandas==2.2.3
+psycopg2-binary==2.9.9
 pydantic==2.10.1
 pydantic_core==2.27.1
+PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python3-saml==1.16.0
 pytz==2024.2
+redis==5.0.1
+requests-oauthlib==1.3.1
 scikit-learn==1.5.2
 scipy==1.13.1
 six==1.16.0
